Basic Motor Functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.11,<3.14"
 dependencies = [
     "numpy>=2.2.3",
     "loguru>=0.7.3",
+    "pyserial>=3.5",
 ]
 [dependency-groups]
 dev = [
