--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,10 @@ jobs:
         run: make lint
 
   # --------------------------------------------------------------------------
-  # TYPE CHECK (Mypy)
+  # TYPE CHECK (Pyright)
   # --------------------------------------------------------------------------
   typecheck:
-    name: Type Check (Mypy)
+    name: Type Check (Pyright)
     runs-on: ubuntu-latest
     needs: lint
 
