--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,36 +2,34 @@ ci:
   skip: [pytest]
 
 default_language_version:
-  python: python3.13
+  python: python3.12
 
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
-    -   id: trailing-whitespace
-        args: [--markdown-linebreak-ext=md]
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: debug-statements
-    -   id: name-tests-test
-    -   id: requirements-txt-fixer
--   repo: https://github.com/PyCQA/flake8
-    rev: 7.1.2
-    hooks:
-    -   id: flake8
-        args: [--max-line-length=88, --ignore=E203]
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.15.0
-    hooks:
-    -   id: mypy
-        additional_dependencies: [types-pyyaml]
-        exclude: ^testing/resources/
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v6.0.0
+  hooks:
+    - id: trailing-whitespace
+      args: [--markdown-linebreak-ext=md]
+    - id: end-of-file-fixer
+    - id: check-yaml
+    - id: debug-statements
+    - id: name-tests-test
+    - id: requirements-txt-fixer
+
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.18.2
+  hooks:
+    - id: mypy
+      args: ["--ignore-missing-imports"]
+      additional_dependencies: []
+      exclude: ^testing/resources/
+
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.9.10
+  rev: v0.14.6
   hooks:
     - id: ruff
-      types_or: [ python, pyi ]
-      args: [ --fix]
+      types_or: [python, pyi]
+      args: ["--fix"]
+
     - id: ruff-format
-      types_or: [ python, pyi ]
-      args: [ --line-length=88]
+      types_or: [python, pyi]
