--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Sync dependencies
         run: make init
 
-      - name: Run Mypy
+      - name: Run Pyright
         run: make typecheck
 
   # --------------------------------------------------------------------------
