New Pattern to test motor: Posotion Control, Velocity Control, Duty Cycle control, Current Control

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ dependencies = [
     "numpy>=2.2.3",
     "loguru>=0.7.3",
     "pyserial>=3.5",
-  "numpy>=2.2.3",
-  "loguru>=0.7.3",
 ]
+
+[project.scripts]
+motor = "motor_python.__main__:main"
 
 [dependency-groups]
 dev = [
