Add CAN support via MCP2515 SPI driver
- Add MCP2515 CAN controller driver (mcp2515.py)
- Add CubeMarsAK606CAN class for CAN motor control
- Add CAN examples and comprehensive tests (31 tests)
- Add interactive UART/CAN selection in make app
- Add CAN documentation (setup guide, quick reference)
- Update definitions with CAN constants and scale factors
- Requires motor to be set to 500Kbps CAN bitrate

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ dependencies = [
     "pyserial>=3.5",
 ]
 
+# --- Optional dependencies for CAN interface ---
+[project.optional-dependencies]
+can = [
+    "spidev>=3.5",
+]
+
 [dependency-groups]
 dev = [
   "ruff>=0.6.9",
