WIP: Add native CAN implementation for CubeMars AK60-6
- CubeMarsAK606v3CAN class with full Servo mode CAN protocol
- Extended 29-bit CAN IDs: (mode << 8) | motor_id
- enable_motor() / disable_motor() commands (0xFC / 0xFD)
- All 7 Servo mode control modes (velocity, position, current, etc.)
- Periodic feedback parsing from motor broadcast ID 0x2903
- CANDefaults dataclass in definitions.py
- setup_can.sh with correct berr-reporting and restart-ms
- Test scripts and docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "numpy>=2.2.3",
     "loguru>=0.7.3",
     "pyserial>=3.5",
+    "python-can>=4.4.0",
 ]
 
 [dependency-groups]
