--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,4 +118,5 @@ jobs:
         uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ./coverage.xml
+          file: coverage.xml
+          format: cobertura
